# Spine-Hotkey-Studio

./: .gitattributes  .gitignore  LICENSE  README.md  app.py  hotkey_core.py  index.html  launch.bat  launcher.cs  package-lock.json  package.json
src/: hotkeys.test.ts  hotkeys.ts  main.ts  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/resources/defaults/: spine-3.8.99-hotkeys.txt
src-tauri/src/: lib.rs  main.rs
tests/: test_hotkey_core.py
