[package]
name = "spine-hotkey-studio"
version = "1.0.0"
description = "Modern hotkey and preset manager for Spine"
authors = ["Cuong Manh"]
edition = "2021"

[lib]
name = "spine_hotkey_studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["clock", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "2.11.5", features = [] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Storage_FileSystem"] }
